meme titles, votes, database
working on meme titles and votes as well as persistent db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,19 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 
 # Password for the H2-Console
+
+# temporary db in memory (resets on restart
 spring.datasource.url=jdbc:h2:mem:testdb
+
+# persistent db in local files
+#spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+#spring.jpa.hibernate.ddl-auto=update
+
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=pw
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+
