--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,14 @@ spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:mem:testdb
 
 # persistent db in local files
-#spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+#spring.datasource.url=jdbc:h2:file:./data/testdb2;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 #spring.jpa.hibernate.ddl-auto=update
 
+#spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=pw
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
