--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 
 # persistent db in local files
 #spring.datasource.url=jdbc:h2:file:./data/testdb2;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update1
 
 #spring.jpa.hibernate.ddl-auto=none
 
