added chat to new lobbies
and updated lobbygetdto to send chatid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.port=8080
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 
+# Custom H2 Console URL
+spring.h2.console.path=/h2
+
 # Password for the H2-Console
 
 # temporary db in memory (resets on restart
