--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ springBoot {
 dependencies {
     implementation 'org.mapstruct:mapstruct:1.3.1.Final'
     implementation 'junit:junit:4.12'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile 'com.google.code.gson:gson:2.7'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
     testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 
